# MelonLuaSandbox

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: API.md  LUA_GUIDE.md  MELSAVE_AI_ARCHITECTURE.md  MELSAVE_FORMAT.md  SUBAGENT_VP36_PROMPT.md  SUBAGENT_VP_NODE_SHARDS.md  VPCHIP_TO_LUA.md  guide.md  persona.md  stdlib.md
melon_lua/: __init__.py  __main__.py  catalog.py  constraints.py  entity.py  melmod.py  melsave.py  melsave_builder.py  melsave_writer.py  preamble.lua  preview.py  runner.py  session.py  spawn_queue.py  stdlib_bit32_shim.lua  stdlib_melon.py  uicontrol_builder.py  visuals.py  world.py
samples/: adder.lua  bignum.lua  collision_demo.lua  entity_demo.lua  firework_at_2_2.lua  firework_plastic_big_r3.lua  hello_chip.lua  move_to_target.lua  physics_demo.lua  plastic_at_0_1.lua  spawn_async.lua  stdlib_smoke.lua  timeline.json  turret_demo.lua
scripts/: _check_registry.py  _test_lua_melsave.py  _xj11_compile.py  _xj11_conn.py  _xj11_deep.py  _xj11_graph.py  _xj11_inspect.py  _xj11_nodes.py  _xj11_run.py  _xj11_semantics.py  _xj11_vector.py  _xj11_vector2.py  build_new_rocket_save.py  capture_firework_instant.py  compile_vp_from_melsave.py  convert_vp_to_lua_chip.py  demo_move_to_target.py  demo_plastic_screenshot.py  frida_probe_lua_entity_api.py  frida_run_js.py  frida_scan_il2cpp_strings.js  inspect_melsave.py  render_melsave_preview.py  render_tank_full.py  self_test_firework.py  self_test_firework_plastic_r3.py  smoke_real_vp.py  smoke_vp_compile.py  sync_sprite_data.py  verify_melon_stdlib.py  verify_sdk.py  (+1 more)
(+115 files in other folders)
